--- a/src/styles/loadingScreen.css
+++ b/src/styles/loadingScreen.css
@@ -1,15 +1,9 @@
 .loadingScreen {
-  height: 100%;
-  width: 95%;
+  padding: 60px 90px;
   background-color: var(--primary-colour-lighter);
   color: var(--primary-colour);
   border-radius: 24px;
-
-  /* positioning */
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) scale(1.1);
+  font-size: .9rem;
 
   /* flex box */
   display: flex;
